[package]
name = "set-5"
version = "0.1.0"
authors = ["Ray Xu <megrxu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
set-1 = {path="../set-1/"}
set-2 = {path="../set-2/"}
set-3 = {path="../set-3/"}
set-4 = {path="../set-4/"}
hex = "0.4.2"
num-bigint = "0.3"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.7.0"
lazy_static = "1.3.0"
